// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`calculateDistribution() > it returns [[address, distributionPercentage]] 1`] = `
[
  [
    "0x1234",
    "0.61351474661127737537",
  ],
  [
    "0x5678",
    "0.11011801398395041019",
  ],
  [
    "0x9abc",
    "0.20450485068900913232",
  ],
  [
    "0xdef0",
    "0.032534769758950351442",
  ],
  [
    "0x2234",
    "0.039327618956812730678",
  ],
]
`;

exports[`createAdjustedScores() > it adds "adjustedScores" to tranlsation inputs 1`] = `
[
  {
    "adjustedScore": "10",
    "contributedAtMs": 1618000000000n,
    "contributorAddress": "0x1234",
    "decayMultiplier": 1,
    "editDistanceMultiplier": 1,
    "lineId": "line1",
    "score": "10",
    "translatedLineId": "translatedLine1",
    "translatedText": "Hello, world!",
  },
  {
    "adjustedScore": "10.769229061780429538",
    "contributedAtMs": 1618000005000n,
    "contributorAddress": "0x5678",
    "decayMultiplier": 0.99999984145104,
    "editDistanceMultiplier": 0.5384615384615384,
    "lineId": "line1",
    "score": "20",
    "translatedLineId": "translatedLine2",
    "translatedText": "Goodbye, world!",
  },
  {
    "adjustedScore": "19.999993658041602",
    "contributedAtMs": 1618000010000n,
    "contributorAddress": "0x9abc",
    "decayMultiplier": 0.9999996829020802,
    "editDistanceMultiplier": 0.6666666666666666,
    "lineId": "line1",
    "score": "30",
    "translatedLineId": "translatedLine3",
    "translatedText": "Hello again, world!",
  },
  {
    "adjustedScore": "50",
    "contributedAtMs": 1618000100000n,
    "contributorAddress": "0x1234",
    "decayMultiplier": 1,
    "editDistanceMultiplier": 1,
    "lineId": "line2",
    "score": "50",
    "translatedLineId": "translatedLine4",
    "translatedText": "Hello, Bob!",
  },
  {
    "adjustedScore": "3.1818080923389146818",
    "contributedAtMs": 1618000200000n,
    "contributorAddress": "0xdef0",
    "decayMultiplier": 0.9999968290208017,
    "editDistanceMultiplier": 0.6363636363636364,
    "lineId": "line2",
    "score": "5",
    "translatedLineId": "translatedLine5",
    "translatedText": "Goodbye, Bob!",
  },
  {
    "adjustedScore": "3.8461294540061665",
    "contributedAtMs": 1618000300000n,
    "contributorAddress": "0x2234",
    "decayMultiplier": 0.9999936580416032,
    "editDistanceMultiplier": 0.7692307692307693,
    "lineId": "line2",
    "score": "5",
    "translatedLineId": "translatedLine6",
    "translatedText": "Hello again, Bob!",
  },
  {
    "adjustedScore": "0",
    "contributedAtMs": 1649536100000n,
    "contributorAddress": "0x1234",
    "decayMultiplier": 0,
    "editDistanceMultiplier": 0.47058823529411764,
    "lineId": "line2",
    "score": "2",
    "translatedLineId": "translatedLine7",
    "translatedText": "Hello, Bobby!",
  },
]
`;

exports[`createEditDistanceMultiplier() > it adds "editDistance" to tranlsation inputs 1`] = `
[
  {
    "contributedAtMs": 1618000000000n,
    "contributorAddress": "0x1234",
    "editDistanceMultiplier": 1,
    "lineId": "line1",
    "score": "10",
    "translatedLineId": "translatedLine1",
    "translatedText": "Hello, world!",
  },
  {
    "contributedAtMs": 1618000005000n,
    "contributorAddress": "0x5678",
    "editDistanceMultiplier": 0.5384615384615384,
    "lineId": "line1",
    "score": "20",
    "translatedLineId": "translatedLine2",
    "translatedText": "Goodbye, world!",
  },
  {
    "contributedAtMs": 1618000010000n,
    "contributorAddress": "0x9abc",
    "editDistanceMultiplier": 0.6666666666666666,
    "lineId": "line1",
    "score": "30",
    "translatedLineId": "translatedLine3",
    "translatedText": "Hello again, world!",
  },
  {
    "contributedAtMs": 1618000200000n,
    "contributorAddress": "0xdef0",
    "editDistanceMultiplier": 0.7368421052631579,
    "lineId": "line2",
    "score": "5",
    "translatedLineId": "translatedLine5",
    "translatedText": "Goodbye, Bob!",
  },
  {
    "contributedAtMs": 1618000300000n,
    "contributorAddress": "0x2234",
    "editDistanceMultiplier": 0.7692307692307693,
    "lineId": "line2",
    "score": "5",
    "translatedLineId": "translatedLine6",
    "translatedText": "Hello again, Bob!",
  },
  {
    "contributedAtMs": 1618000100000n,
    "contributorAddress": "0x1234",
    "editDistanceMultiplier": 0.35294117647058826,
    "lineId": "line2",
    "score": "50",
    "translatedLineId": "translatedLine4",
    "translatedText": "Hello, Bob!",
  },
  {
    "contributedAtMs": 1649536100000n,
    "contributorAddress": "0x1234",
    "editDistanceMultiplier": 0.18181818181818182,
    "lineId": "line2",
    "score": "2",
    "translatedLineId": "translatedLine7",
    "translatedText": "Hello, Bobby!",
  },
]
`;

exports[`decayMultiplier() > it adds "decayMultiplier" to tranlsation objects 1`] = `
[
  {
    "contributedAtMs": 1618000000000n,
    "contributorAddress": "0x1234",
    "decayMultiplier": 1,
    "lineId": "line1",
    "score": "10",
    "translatedLineId": "translatedLine1",
    "translatedText": "Hello, world!",
  },
  {
    "contributedAtMs": 1618000005000n,
    "contributorAddress": "0x5678",
    "decayMultiplier": 0.99999984145104,
    "lineId": "line1",
    "score": "20",
    "translatedLineId": "translatedLine2",
    "translatedText": "Goodbye, world!",
  },
  {
    "contributedAtMs": 1618000010000n,
    "contributorAddress": "0x9abc",
    "decayMultiplier": 0.9999996829020802,
    "lineId": "line1",
    "score": "30",
    "translatedLineId": "translatedLine3",
    "translatedText": "Hello again, world!",
  },
  {
    "contributedAtMs": 1618000200000n,
    "contributorAddress": "0xdef0",
    "decayMultiplier": 0.9999936580416032,
    "lineId": "line2",
    "score": "5",
    "translatedLineId": "translatedLine5",
    "translatedText": "Goodbye, Bob!",
  },
  {
    "contributedAtMs": 1618000300000n,
    "contributorAddress": "0x2234",
    "decayMultiplier": 0.9999904870624049,
    "lineId": "line2",
    "score": "5",
    "translatedLineId": "translatedLine6",
    "translatedText": "Hello again, Bob!",
  },
  {
    "contributedAtMs": 1618000100000n,
    "contributorAddress": "0x1234",
    "decayMultiplier": 0.9999968290208017,
    "lineId": "line2",
    "score": "50",
    "translatedLineId": "translatedLine4",
    "translatedText": "Hello, Bob!",
  },
  {
    "contributedAtMs": 1649536100000n,
    "contributorAddress": "0x1234",
    "decayMultiplier": 0,
    "lineId": "line2",
    "score": "2",
    "translatedLineId": "translatedLine7",
    "translatedText": "Hello, Bobby!",
  },
]
`;
